# llamaindex-rag-first-steps

./: pyproject.toml
rag/: app.py
rag/storage/: default__vector_store.json  docstore.json  index_store.json
